fix: descriptionEdit resize dragbar more visible

--- a/client/src/styles.module.scss
+++ b/client/src/styles.module.scss
@@ -60,6 +60,11 @@
       padding-bottom: 0;
     }
 
+    .w-md-editor-bar {
+      color: var(--textColor0);
+      width: 30px;
+    }
+
     .w-md-editor-toolbar {
       background-color: var(--backgroundColorTmpDarkerField);
     }
